Bug 231153 - [GTK] REGRESSION(r283304): All GTK4 layout tests are aborting
Summary: [GTK] REGRESSION(r283304): All GTK4 layout tests are aborting
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Lauro Moura
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2021-10-03 20:11 PDT by Lauro Moura
Modified: 2021-10-03 22:38 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.69 KB, patch)
2021-10-03 20:12 PDT, Lauro Moura
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Lauro Moura 2021-10-03 20:11:37 PDT
[GTK] REGRESSION(r283304): All GTK4 layout tests are aborting
Comment 1 Lauro Moura 2021-10-03 20:12:41 PDT
Created attachment 440032 [details]
Patch
Comment 2 EWS 2021-10-03 22:37:14 PDT
Committed r283487 (242460@main): <https://commits.webkit.org/242460@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 440032 [details].
Comment 3 Radar WebKit Bug Importer 2021-10-03 22:38:16 PDT
<rdar://problem/83823345>