[GTK] REGRESSION(r283304): All GTK4 layout tests are aborting https://bugs.webkit.org/show_bug.cgi?id=231153

Reviewed by Alexey Proskuryakov.

Revert back to the previous NOP behavior of bindAccessibilityTree()
for GTK4, leaving the assert for the debug mode with an informative
message in the log.

Covered by existing tests.

* UIProcess/gtk/WebPageProxyGtk.cpp:
(WebKit::WebPageProxy::bindAccessibilityTree):


Canonical link: https://commits.webkit.org/242460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283487 268f45cc-cd09-0410-ab3c-d52691b4dbfc